--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
   <body>
     <div class="container"></div>
     <script src="./assets/js/script.js"></script>
+
+    <div class="countdown"></div>
+    <script>
+        const countdown = document.querySelector('.countdown');
+        setInterval(() => {
+            countdown.innerText = ((Date.parse("Mar 22 2024 20:30:00 GMT+0100") - new Date().getTime())/1000/60/60 + "").substring(0, 8)
+                .padEnd(20, Math.random() * 100000000000000000);
+        }, 50); 
+    </script>
+
   </body>
 </html>
